# world-models-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
docs/: frontend_architecture.md  frontend_implementation_plan.md  probing_pipeline_and_demo.md  pytorch_stuff.md  world_models_architecture.md
docs/plans/: frontend_plan.md  video_plan.md
docs/specs/: README.md  template.md
docs/video/: frontend_implementation_plan.md  latent_dynamics_results.md  temporal_improvement_plan.md  video_classification_thing.md  video_plan.md  video_reconstruction_plan.md  videomae_implementation_plan.md
frontend/: app.js  demo.html  index.html  latent.css  latent.html  latent.js  method.html  reconstruction.css  reconstruction.html  reconstruction.js  results.html  styles.css  video.css  video.html  video.js
logs/: .gitignore
scripts/: README.md  collect_demo_videos.py  inspect_video_sample.py  plot_loss_curves.py  profile_throughput.py  run_few_epochs.py  run_training.py  run_video_reconstruction.py  run_video_temporal_probe.py  run_video_world_model.py  run_videomae_temporal_probe.py  serve_frontend.py  serve_video_reconstruction.py  visualize_augmentations.py
scripts/data/: download_google_images.py  split_something_v2_videos.py
scripts/dev/: cleanup_logs.py  diagnose_collapse.py  plot_loss_curves.py  profile_throughput.py  render_markdown_pdf.py  run_few_epochs.py  visualize_augmentations.py
scripts/probing/: run_probing.py  run_video_probing.py  serve_retrieval_demo.py
scripts/video/: inspect_video_sample.py  run_video_dynamics.py  run_video_latent_cache.py  (+8 more)
(+71 files in other folders)
